@@ -3365,6 +3365,11 @@ changes to the command language don't have a high cost in pain to
 users, and the maintainers feel free to make them whenever improvement
 seems possible.  But just in case, such changes are recorded here.
 
+The "tip" command present in 4.24 and esrlier has been removed,
+because the concept it;s trying to compute is not clearly defined at
+any commit upstream of a fork point. There's no evidence this was
+evber ued in the wild.
+
 In versions 4.24 and earlier the behavior of the "unite" command
 was incompatibly different it that it took master branch from the last
 repo in the list, renaming others. Now it leaves master from the first.
