@@ -58,7 +58,6 @@ read <simple.fi
    129 commit   :128    refs/heads/master
    130 branch   :128    refs/heads/master
    131 tag      :113    annotated-sample
-:76 tip
 tags
      2	reset	refs/tags/lightweight-sample
     83	commit	refs/tags/lightweight-sample
