@@ -6,6 +6,7 @@ Repository head::
      "help" without topic now ermits a custom TOC with command groupings.
      Unite now produces union repositories with a valid master branch.
      repocutter errors out if presented with unexpected extra arguments.
+     "tip" has been removed; what it was computing is not well defined.
 
 4.24: 2021-02-13::
      Retire the read --cvsignores option; best to use an expunge instead.
